apps/public-website/src/styles.css
/* Google Fonts Import */
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Sora:wght@100..800&display=swap');
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
  --font-sans: "Manrope", sans-serif;
  --font-heading: "Sora", sans-serif;

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
}

:root {
  --radius: 0.625rem;
  --background: #ffffff;
  --foreground: #000000;
  --card: #ffffff;
  --card-foreground: #000000;
  --popover: #ffffff;
  --popover-foreground: #000000;
  --primary: #fb6200;
  --primary-foreground: #ffffff;
  --secondary: #f4f4f5;
  --secondary-foreground: #18181b;
  --muted: #f4f4f5;
  --muted-foreground: #71717a;
  --accent: #f4f4f5;
  --accent-foreground: #18181b;
  --destructive: #ef4444;
  --border: #e4e4e7;
  --input: #e4e4e7;
  --ring: #fb6200;
}

.dark {
  --background: #000000;
  --foreground: #ffffff;
  --card: #09090b;
  --card-foreground: #ffffff;
  --popover: #09090b;
  --popover-foreground: #ffffff;
  --primary: #fb6200;
  --primary-foreground: #ffffff;
  --secondary: #27272a;
  --secondary-foreground: #ffffff;
  --muted: #27272a;
  --muted-foreground: #a1a1aa;
  --accent: #27272a;
  --accent-foreground: #ffffff;
  --destructive: #7f1d1d;
  --border: #27272a;
  --input: #27272a;
  --ring: #fb6200;
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  html{
    @apply scroll-smooth overflow-x-hidden;
  }
  body {
    @apply bg-background text-foreground font-sans m-0;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-heading font-bold;
  }
}

